--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@mui/x-charts": "^8.25.0",
     "@tailwindcss/vite": "^4.1.18",
     "apexcharts": "^5.3.6",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-apexcharts": "^1.9.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
+    "react-simple-wysiwyg": "^3.4.1",
     "styled-components": "^6.3.8",
     "tailwindcss": "^4.1.18"
   },
